fixed footer order on mobile per wireframes

--- a/src/css/scss/_responsive/_responsive-footer.scss
+++ b/src/css/scss/_responsive/_responsive-footer.scss
@@ -489,32 +489,10 @@ form.footer-store-locator-form{
 
 
 .footer-wrapper{
-  .footer-contact.span6{
-    width:auto;
-    float:none;
-    text-align:center;
-
-    > p{
-      display:block;
-      // font-size:$font_16_16;
-      line-height:1.85;
-      margin-top: px-em(21px);
-
-      a,
-      a:first-child{
-        margin-right:0;
-        top:auto;
-        display:block;
-        text-align:center;
-      }
-    }
-  }
 
   .footer-language.span6{
-    // overflow:hidden;
-    padding-top: px-em(28px);
-    margin-top: px-em(30px);
-    border-top: solid 2px $grayDarkFieldLarge; 
+    
+    padding: px-em(35px) 0;
 
     .footer-language-selectors{
       max-width: px-em(300px);
@@ -526,6 +504,30 @@ form.footer-store-locator-form{
     }
     .dropdown-hover-menu-lists-w{
       @include box-shadow(-1px 0px 1px 0px rgba(0,0,0,0.2));
+    }
+  }
+
+  .footer-contact.span6{
+    width:auto;
+    float:none;
+    text-align:center;
+
+    padding: px-em(32px) 0;
+    border-bottom: solid 2px $grayDarkFieldLarge; 
+    border-top: solid 2px $grayDarkFieldLarge; 
+
+    > p{
+      display:block;
+      // font-size:$font_16_16;
+      line-height:1.85;
+
+      a,
+      a:first-child{
+        margin-right:0;
+        top:auto;
+        display:block;
+        text-align:center;
+      }
     }
   }
 }
